# dotling

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  flake.nix  justfile  result  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  changelog.md  configuration.md  contributing.md  encryption.md  env-vars.md  getting-started.md  global-state.md  introduction.md  sync-details.md  templates.md
docs/src/api/: README.md  config.md  core.md  crypto.md  sync.md
docs/src/cli/: README.md  add.md  completions.md  decrypt.md  doctor.md  edit.md  encrypt.md  init.md  remove.md  status.md  sync.md  vars.md  vault.md
src/: cli.rs  config.rs  crypto.rs  deploy.rs  error.rs  fingerprint.rs  fs.rs  git.rs  hooks.rs  lib.rs  linker.rs  main.rs  path.rs  platform.rs  printer.rs  repo.rs  store.rs  ui.rs
src/commands/: add.rs  apply.rs  backup.rs  completions.rs  deploy.rs  diff.rs  doctor.rs  edit.rs  encrypt.rs  init.rs  keygen.rs  link.rs  list.rs  mod.rs  pull_back.rs  push.rs  remove.rs  status.rs  sync.rs  unlink.rs  vars.rs  vault.rs
src/config/: mod.rs  template.rs  vars.rs
src/core/: error.rs  fs.rs  mod.rs  store.rs
src/crypto/: mod.rs  vault.rs
src/sync/: backup.rs  deploy.rs  fingerprint.rs  merge.rs  mod.rs
tests/: encrypt_decrypt_roundtrip.rs  template_sync_lifecycle.rs
