[package]
name = "dotling"
version = "0.8.0"
edition = "2024"
rust-version = "1.85"
description = "A dotfiles management CLI — track, link, and sync your config files across machines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/auricvex/dotling"
homepage = "https://github.com/auricvex/dotling"
documentation = "https://auricvex.github.io/dotling/"
readme = "README.md"
authors = ["Ade M Ramdani <auricvex@gmail.com>"]
keywords = ["dotfiles", "symlink", "cli", "config", "encryption"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
  ".github/",
  ".vscode/",
  "flake.*",
  "shell.nix",
  "default.nix",
  ".envrc",
  "deny.toml",
  "clippy.toml",
  "rustfmt.toml",
  "target/",
]

[dependencies]
clap = { version = "4.6.1", features = ["color", "derive"] }
clap_complete = "4.5"
chacha20poly1305 = "0.10"
argon2 = "0.5"
blake2 = "0.10"
rand = "0.9"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.27.0"
serial_test = "3"

[lints.clippy]
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
pedantic = { level = "warn", priority = -1 }
